EKS/resume-matcher-ghcr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-matcher-ghcr
  labels:
    app: resume-matcher-ghcr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resume-matcher-ghcr
  template:
    metadata:
      labels:
        app: resume-matcher-ghcr
    spec:
      serviceAccountName: resume-matcher-sa
      automountServiceAccountToken: false

      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: resume-matcher-ghcr
          image: ghcr.io/kaifmohammedkhan/resume-matcher-devops:sha-703771a
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
            - name: logs
              mountPath: /app/logs
            - name: config-volume
              mountPath: /app/config
              readOnly: true

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

      volumes:
        - name: uploads
          emptyDir: {}

        - name: logs
          emptyDir: {}

        - name: config-volume
          configMap:
            name: resume-config
