EKS/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: db
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      serviceAccountName: postgres-sa
      automountServiceAccountToken: false

      containers:
        - name: postgres
          image: postgres:15

          ports:
            - containerPort: 5432

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
              ephemeral-storage: "2Gi"

          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              subPath: postgres

            - name: init-script
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: init-script
          configMap:
            name: resume-config

  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: db
spec:
  clusterIP: None

  selector:
    app: db

  ports:
    - port: 5432
      targetPort: 5432
