EKS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health   # <-- updated
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-matcher-service
                port:
                  number: 80
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: resume-matcher-service
                port:
                  number: 80
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: resume-matcher-service
                port:
                  number: 80
